--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "jest",
     "lint": "eslint src/ --fix",
     "prepare": "npm run build",
-    "prepublishOnly": "npm run test && npm run lint",
+    "prepublishOnly": "npm run lint",
     "preversion": "npm run lint",
     "version": "git add -A src",
     "postversion": "git push && git push --tags"
