fix: update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "envts",
+  "name": "@larrrssss/envts",
   "version": "1.0.1",
   "description": "Typed environment variables",
   "main": "lib/index.js",
